syntax = "proto3";
option go_package = "github.com/TrueBlocks/trueblocks-core/src/apps/chifra/proto";

service Names {
    // Search
    rpc Search(SearchRequest) returns (SearchResponse) {}
    rpc SearchStream(SearchRequest) returns (stream Name) {}
    // CRUD
    rpc Create(CreateRequest) returns (CRUDResponse) {}
    rpc Update(CreateRequest) returns (CRUDResponse) {}
    rpc Delete(DeleteRequest) returns (CRUDResponse) {}
    rpc Undelete(DeleteRequest) returns (CRUDResponse) {}
    rpc Remove(DeleteRequest) returns (CRUDResponse) {}
}

message SearchRequest {
    int64 parts = 1;
    repeated string terms = 2;
    int64 sort = 3;
}

message SearchResponse {
    repeated Name names = 1;
}

message Name {
    string address = 1;
    optional uint64 decimals = 2;
    optional bool deleted = 3;
    optional bool isContract = 4;
    optional bool isCustom = 5;
    optional bool isErc20 = 6;
    optional bool isErc721 = 7;
    optional bool isPrefund = 8;
    string name = 9;
    optional string petname = 10;
    optional string source = 11;
    optional string symbol = 12;
    optional string tags = 13;
}

message CreateRequest {
    string chain = 1;
    Name name = 2;
}

message CRUDResponse {
    bool success = 1;
    optional string error = 2;
}

message DeleteRequest {
    string chain = 1;
    string address = 2;
}
